# SonarQube

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  sonar-project.properties  task2_analysis_guide.md  task3_github_actions_guide.md  task4_analyze_and_fix_report.md
.github/workflows/: sonarqube.yml
src/: app.py  intentional_issues.py
tests/: test_app.py
